# obstacle-avoidance

./: .README.md.swp  .gitignore  AMCL_viz.rviz  AUTHORS.md  README.md  don_viz.rviz  helpfuldocs.md  output.txt  stacked_viz.rviz
ros2_ws/: .gitignore  amcl_params.yaml  complex_add_test.pgm  complex_add_test.yaml  complex_static_test.pgm  complex_static_test.yaml  complex_static_test1.pgm  complex_static_test1.yaml  frames_2025-12-24_17.26.56.gv  map_name.pgm  map_name.yaml  maze.pgm  maze.yaml  maze_slamed.pgm  maze_slamed.yaml  olin304-308.pgm  olin304-308.yaml  olin304.pgm  olin304.yaml  olinmaze.pgm  olinmaze.yaml  simple_static.pgm  simple_static.yaml  static_test_map.pgm  static_test_map.yaml  static_test_map2.pgm  static_test_map2.yaml
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/install/demo_package/lib/demo_package/: demo_node
ros2_ws/install/demo_package/share/demo_package/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/turtlesim/lib/turtlesim/: draw_square  mimic  turtle_teleop_key
ros2_ws/install/turtlesim/share/turtlesim/: local_setup.sh  package.sh
ros2_ws/log/: latest_build  latest_list
ros2_ws/src/a_star/: package.xml  setup.cfg  setup.py
ros2_ws/src/a_star/a_star/: a_star_nav.py  run_a_star.py  visualizer.py
ros2_ws/src/a_star/config/: a_star_params.yaml
ros2_ws/src/d_star/: package.xml  setup.cfg  setup.py
ros2_ws/src/d_star/config/: d_star_params.yaml
ros2_ws/src/d_star/d_star/: d_star_nav.py  live_visualizer.py  odom_subscriber.py  visualizer.py
ros2_ws/src/demo_package/: package.xml  setup.py
ros2_ws/src/demo_package/demo_package/: demo_node.py
ros2_ws/src/dwa_package/: package.xml  setup.cfg  setup.py
ros2_ws/src/dwa_package/config/: dwa_params.yaml  stacked_params.yaml
ros2_ws/src/dwa_package/dwa_package/: costFunctionStarter.py  distanceGrid.py  dwa_node.py  map_node.py
ros2_ws/src/joy_test/: package.xml  setup.py
ros2_ws/src/joy_test/joy_test/: input.py
ros2_ws/src/jps/: package.xml  setup.cfg  setup.py
ros2_ws/src/jps/config/: jps_params.yaml
ros2_ws/src/jps/jps/: jps_nav.py  jps_visualizer.py  odom_subscriber.py
ros2_ws/src/log/: latest_list
ros2_ws/src/nav_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/nav_interfaces/action/: FollowPath.action  Navigate.action  RunBatch.action
ros2_ws/src/nav_interfaces/msg/: NavStatus.msg
ros2_ws/src/nav_interfaces/srv/: CancelNav.srv  GetGridSnapshot.srv  PlanPath.srv
ros2_ws/src/nav_server/: package.xml  setup.cfg  setup.py
ros2_ws/src/nav_server/config/: nav_server_params.yaml
ros2_ws/src/nav_server/launch/: navigation_launch.py
ros2_ws/src/nav_server/nav_server/: navigate_cli.py  navigation_server.py  rviz_config.py
ros2_ws/src/oa_utils/: package.xml  setup.cfg  setup.py
ros2_ws/src/oa_utils/oa_utils/: __init__.py  base_planner.py  conversions.py  pathing.py
ros2_ws/src/obstacle_grid/: package.xml  setup.cfg  setup.py
ros2_ws/src/obstacle_grid/config/: obstacle_grid_params.yaml
ros2_ws/src/obstacle_grid/obstacle_grid/: amanatides_woo.py  distance_grid.py  log_odds.py  obstacle_grid_node.py  raycaster.py
ros2_ws/src/rl_local_planner/: package.xml  setup.cfg  setup.py
ros2_ws/src/rl_local_planner/rl_local_planner/: rl_local_planner_node.py
ros2_ws/src/rl_local_planner/test/: test_node_lifecycle.py
ros2_ws/src/safety_mux/: package.xml  setup.cfg  setup.py
ros2_ws/src/safety_mux/config/: safety_mux_params.yaml
ros2_ws/src/safety_mux/safety_mux/: safety_mux_node.py
ros2_ws/src/scenario_runner/: package.xml  setup.py
ros2_ws/src/scenario_runner/config/: scenario_runner_params.yaml
ros2_ws/src/scenario_runner/launch/: scenario_runner_launch.py
ros2_ws/src/scenario_runner/scenario_runner/: dataset_writer.py  episode.py  gazebo_reset.py  scenario_runner_node.py  scenario_spec.py  seeds.py  terminal_detector.py  versioning.py
ros2_ws/src/scenario_runner/scenarios/: indoor_basic_01.yaml  manifest.yaml
ros2_ws/src/sensor_data/: package.xml  setup.py
ros2_ws/src/sensor_data/sensor_data/: image.py  lidar.py  map_subscriber.py
