<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>a_star</name>
  <version>2.0.0</version>
  <description>A* global planner exposed as a PlanPath service for the obstacle-avoidance stack. Pure call/response worker: takes an inflated OccupancyGrid plus start/goal and returns a nav_msgs/Path.</description>
  <maintainer email="scheiderd@carleton.edu">daniel</maintainer>
  <license></license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>nav_interfaces</depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>


  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
