<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>d_star</name>
  <version>2.0.0</version>
  <description>D* Lite global path planner. The navigation server calls it with a grid and a start/goal and gets back a path.</description>
  <maintainer email="scheiderd@carleton.edu">daniel</maintainer>
  <license>TODO</license>

  <depend>geometry_msgs</depend>
  <depend>nav_interfaces</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>oa_utils</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
