<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav_server</name>
  <version>2.0.0</version>
  <description>Call/response Navigate action orchestrator for the obstacle-avoidance stack. Drives PlanPath (global) and FollowPath (local) contracts; no planner runs its own replan loop.</description>
  <maintainer email="scheiderd@carleton.edu">daniel</maintainer>
  <license></license>

  <depend>builtin_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_interfaces</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
