<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>oa_utils</name>
  <version>2.0.0</version>
  <description>Shared utilities and base classes for obstacle-avoidance global planners.</description>
  <maintainer email="scheiderd@carleton.edu">daniel</maintainer>
  <license>TODO</license>

  <depend>geometry_msgs</depend>
  <depend>nav_interfaces</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
