<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>obstacle_grid</name>
  <version>2.0.0</version>
  <description>Shared LIDAR obstacle grid. Publishes raw and inflated OccupancyGrids and serves matched pairs through GetGridSnapshot for planners.</description>
  <maintainer email="scheiderd@carleton.edu">daniel</maintainer>
  <license>TODO</license>

  <depend>nav_interfaces</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>


  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
