<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rl_local_planner</name>
  <version>0.0.1</version>
  <description>Reinforcement Learning based local planner for TurtleBot 4.</description>
  <maintainer email="scheiderd@carleton.edu">daniel</maintainer>
  <license>TODO</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>nav_interfaces</depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-stable-baselines3</exec_depend>
  <exec_depend>python3-torch</exec_depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
