<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>safety_mux</name>
  <version>2.0.0</version>
  <description>cmd_vel multiplexer and safety override. Latches a zero-velocity command on bumper, cliff, or sensor-staleness, independent of the orchestrator.</description>
  <maintainer email="scheiderd@carleton.edu">daniel</maintainer>
  <license></license>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
